updated samples for 1.4.0

--- a/KDB.AI_course/course_specific_content/managing_tables.ipynb
+++ b/KDB.AI_course/course_specific_content/managing_tables.ipynb
@@ -144,7 +144,8 @@
       },
       "outputs": [],
       "source": [
-        "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
+        "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)\n",
+        "database = session.database(\"default\")"
       ]
     },
     {
@@ -197,8 +198,7 @@
       "source": [
         "# ensure no table called \"data\" exists\n",
         "try:\n",
-        "    session.table(\"data\").drop()\n",
-        "    time.sleep(5)\n",
+        "    database.table(\"data\").drop()\n",
         "except kdbai.KDBAIException:\n",
         "    pass"
       ]
@@ -224,7 +224,7 @@
         }
       ],
       "source": [
-        "session.list()"
+        "database.tables"
       ]
     },
     {
@@ -236,14 +236,17 @@
       "source": [
         "## 2. Create a KDB.AI Table\n",
         "\n",
-        "To create a table we can use `create_table`, this function takes two arguments - the name and schema of the table.\n",
+        "To create a table we can use `create_table`, this function takes two mandatory arguments - the name and schema of the table.\n",
         "\n",
         "This schema must meet the following criteria:\n",
         "- It must contain a list of columns.\n",
-        "- All columns must have either a `pytype` or a `qtype` specified, except the column of vectors.\n",
-        "- One column of vector embeddings may also have a `vectorIndex` attribute with the configuration of the index for similarity search - this column is implicitly an array of `float32`.\n",
+        "- All columns must have `type` specified.\n",
         "\n",
-        "Run `?session.create_table` for more details and sample code."
+        "If you want to create indexes, you must provide them as separate parameter.\n",
+        "- It must contain a list of index definitions\n",
+        "- Each index must have `name`, `colummn` and `type` attributes. Index-specific parameters can be passed in `params`, it's mandatory for some index types.\n",
+        "\n",
+        "Run `?database.create_table` for more details and sample code."
       ]
     },
     {
@@ -255,7 +258,7 @@
       },
       "outputs": [],
       "source": [
-        "?session.create_table"
+        "?database.create_table"
       ]
     },
     {
@@ -269,10 +272,10 @@
         "\n",
         "Our table will have two columns the first `id` with a list of dummy ID's, the second will be the vector embeddings we will use for similarity search later on in this example.\n",
         "\n",
-        "We will define our dimensionality, similarity metric and index type with the `vectorIndex` attribute. For this example we chose:\n",
+        "We will define our dimensionality, similarity metric and index type in the `indexes` parameter. For this example we chose:\n",
         "- `dims = 8` : In the next section, we generate embeddings that are eight-dimensional to match this. You can chose any value here.\n",
         "- `metric = L2` : We chose [L2/Euclidean distance](https://en.wikipedia.org/wiki/Euclidean_distance). Our dummy dataset is low dimensional which Euclidean distance is suitable for. You have the choice of using other metrics here like [IP/Inner Product](https://en.wikipedia.org/wiki/Inner_product_space) and [CS/Cosine Similarity](https://en.wikipedia.org/wiki/Cosine_similarity) and the one you chose depends on the specific context and nature of your data.\n",
-        "- `type = flat` : We use a [Flat index](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexFlat.html) here as we have a simple data structure so this is more than adequate. You have the choice of using other indexes like [HNSW](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexHNSW.html) and [IVFPQ](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexIVFPQ.html) here, as with metrics the one you chose depends your data and your overall performance requirements.\n"
+        "- `type = flat` : We use a [Flat index](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexFlat.html) here as we have a simple data structure so this is more than adequate. You have the choice of using other indexes like [HNSW](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexHNSW.html) and [IVFPQ](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexIVFPQ.html) here, as with metrics the one you chose depends your data and your overall performance requirements."
       ]
     },
     {
@@ -284,12 +287,13 @@
       },
       "outputs": [],
       "source": [
-        "schema = {\n",
-        "    \"columns\": [\n",
-        "        {\"name\": \"id\", \"pytype\": \"str\"},\n",
-        "        {\"name\": \"vectors\", \"vectorIndex\": {\"dims\": 8, \"metric\": \"L2\", \"type\": \"flat\"}},\n",
-        "    ]\n",
-        "}"
+        "schema = [\n",
+        "    {\"name\": \"id\", \"type\": \"str\"},\n",
+        "    {\"name\": \"vectors\", \"type\": \"float32s\"},\n",
+        "]\n",
+        "\n",
+        "index_name = \"flat_index\"\n",
+        "indexes = [{\"name\": index_name, \"column\": \"vectors\", \"type\": \"flat\", \"params\": {\"dims\": 8, \"metric\": \"L2\"}}]"
       ]
     },
     {
@@ -311,7 +315,7 @@
       },
       "outputs": [],
       "source": [
-        "table = session.create_table(\"data\", schema)"
+        "table = database.create_table(\"data\", schema=schema, indexes=indexes)"
       ]
     },
     {
@@ -631,7 +635,7 @@
       ],
       "source": [
         "# Find the closest neighbor of a single query vector\n",
-        "table.search(vectors=[[0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]], n=1)"
+        "table.search(vectors={index_name: [[0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]]}, n=1)"
       ]
     },
     {
@@ -696,6 +700,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -712,9 +719,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.16"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
