--- a/KDB.AI_course/course_specific_content/rag_example.ipynb
+++ b/KDB.AI_course/course_specific_content/rag_example.ipynb
@@ -363,11 +363,11 @@
       "source": [
         "KDBAI_TABLE_NAME = \"paul_graham\"\n",
         "session = kdbai.Session(endpoint=KDBAI_ENDPOINT, api_key=KDBAI_API_KEY)\n",
+        "database = session.database(\"default\")\n",
         "\n",
         "# Drop existing table if it exists\n",
         "try:\n",
-        "    session.table(KDBAI_TABLE_NAME).drop()\n",
-        "    time.sleep(5)\n",
+        "    database.table(KDBAI_TABLE_NAME).drop()\n",
         "except kdbai.KDBAIException:\n",
         "    pass"
       ]
@@ -382,17 +382,14 @@
       "source": [
         "# Define table schema\n",
         "\n",
-        "schema = dict(\n",
-        "    columns=[\n",
-        "        dict(name=\"text\", pytype=\"str\"),\n",
-        "        dict(\n",
-        "            name=\"embedding\",\n",
-        "            vectorIndex=dict(type=\"flat\", metric=\"L2\", dims=384),\n",
-        "        ),\n",
-        "    ]\n",
-        ")\n",
+        "schema = [\n",
+        "    dict(name=\"text\", type=\"bytes\"),\n",
+        "    dict(name=\"embedding\", type=\"float32s\")\n",
+        "]\n",
+        "index_name = \"flat_index\"\n",
+        "indexes = [dict(name=index_name, column=\"embedding\", type=\"flat\", params=dict(metric=\"L2\", dims=384))]\n",
         "\n",
-        "table = session.create_table(KDBAI_TABLE_NAME, schema)"
+        "table = database.create_table(KDBAI_TABLE_NAME, schema=schema, indexes=indexes)"
       ]
     },
     {
@@ -539,7 +536,7 @@
       "outputs": [],
       "source": [
         "records_to_insert_with_embeddings = pd.DataFrame({\n",
-        "    \"text\": documents,\n",
+        "    \"text\": [d.encode('utf-8') for d in documents],\n",
         "    \"embedding\": embeddings\n",
         "})"
       ]
@@ -627,7 +624,7 @@
       },
       "outputs": [],
       "source": [
-        "search_results = session.table(KDBAI_TABLE_NAME).search([query_embedding], n=10)\n",
+        "search_results = table.search({index_name: [query_embedding]}, n=10)\n",
         "search_results_df = search_results[0]"
       ]
     },
