--- a/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
+++ b/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
@@ -335,18 +335,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "schema = dict(\n",
-    "    columns=[\n",
-    "        dict(name=\"document_id\", pytype=\"bytes\"),\n",
-    "        dict(name=\"text\", pytype=\"bytes\"),\n",
-    "        dict(\n",
-    "            name=\"embedding\",\n",
-    "            vectorIndex=dict(type=\"flat\", metric=\"L2\", dims=1536),\n",
-    "        ),\n",
-    "        dict(name=\"title\", pytype=\"bytes\"),\n",
-    "        dict(name=\"publication_date\", pytype=\"datetime64[ns]\"),\n",
-    "    ]\n",
-    ")"
+    "schema = [\n",
+    "    dict(name=\"document_id\", type=\"bytes\"),\n",
+    "    dict(name=\"text\", type=\"bytes\"),\n",
+    "    dict(name=\"embedding\", type=\"float32s\"),\n",
+    "    dict(name=\"title\", type=\"bytes\"),\n",
+    "    dict(name=\"publication_date\", type=\"datetime64[ns]\"),\n",
+    "]\n",
+    "indexes = [dict(name=\"flat_index\", column=\"embedding\", type=\"flat\", params=dict(metric=\"L2\", dims=1536))]"
    ]
   },
   {
@@ -359,13 +355,16 @@
    "outputs": [],
    "source": [
     "KDBAI_TABLE_NAME = \"reports\"\n",
+    "database = session.database(\"default\")\n",
     "\n",
     "# First ensure the table does not already exist\n",
-    "if KDBAI_TABLE_NAME in session.list():\n",
-    "    session.table(KDBAI_TABLE_NAME).drop()\n",
+    "for table in database.tables:\n",
+    "    if table.name == KDBAI_TABLE_NAME:\n",
+    "        table.drop()\n",
+    "        break\n",
     "\n",
     "#Create the table\n",
-    "table = session.create_table(KDBAI_TABLE_NAME, schema)"
+    "table = database.create_table(KDBAI_TABLE_NAME, schema=schema, indexes=indexes)"
    ]
   },
   {
