--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,18 +717,14 @@
    "outputs": [],
    "source": [
     "# Define table schema for our table with columns for path, media_type, text, and embeddings\n",
-    "table_schema = {\n",
-    "    \"columns\": [\n",
-    "        {\"name\": \"path\", \"pytype\": \"str\"},\n",
-    "        {\"name\": \"media_type\", \"pytype\": \"str\"},\n",
-    "        {\"name\": \"text\", \"pytype\": \"str\"},\n",
-    "        {\n",
-    "            \"name\": \"embeddings\",\n",
-    "            \"pytype\": \"float64\",\n",
-    "            \"vectorIndex\": {\"dims\": 1536, \"metric\": \"CS\", \"type\": \"flat\"},\n",
-    "        },\n",
-    "    ]\n",
-    "}"
+    "table_schema = [\n",
+    "    {\"name\": \"path\", \"type\": \"str\"},\n",
+    "    {\"name\": \"media_type\", \"type\": \"str\"},\n",
+    "    {\"name\": \"text\", \"type\": \"bytes\"},\n",
+    "    {\"name\": \"embeddings\", \"type\": \"float64s\"}\n",
+    "]\n",
+    "index_name = \"flat_index\"\n",
+    "indexes = [{\"name\": index_name, \"column\": \"embeddings\", \"type\": \"flat\", \"params\": {\"dims\": 1536, \"metric\": \"CS\"}}]"
    ]
   },
   {
@@ -737,10 +733,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "database = session.database(\"default\")\n",
     "# First ensure the table does not already exist\n",
     "try:\n",
-    "    session.table(\"multi_modal_demo\").drop()\n",
-    "    time.sleep(5)\n",
+    "    database.table(\"multi_modal_demo\").drop()\n",
     "except kdbai.KDBAIException:\n",
     "    pass"
    ]
@@ -752,7 +748,7 @@
    "outputs": [],
    "source": [
     "# Create the table called \"metadata_demo\"\n",
-    "table = session.create_table(\"multi_modal_demo\", table_schema)"
+    "table = database.create_table(\"multi_modal_demo\", schema=table_schema, indexes=indexes)"
    ]
   },
   {
@@ -1065,7 +1061,7 @@
     }
    ],
    "source": [
-    "results = table.search(query_vector, n=3)\n",
+    "results = table.search({index_name: query_vector}, n=3)\n",
     "print(results)"
    ]
   },
