--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -364,17 +364,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rag_eval_schema = {\n",
-    "    \"columns\": [\n",
-    "        {\"name\": \"id\", \"pytype\": \"str\"},\n",
-    "        {\"name\": \"text\", \"pytype\": \"bytes\"},\n",
-    "        {\n",
-    "            \"name\": \"embeddings\",\n",
-    "            \"pytype\": \"float32\",\n",
-    "            \"vectorIndex\": {\"dims\": 1536, \"metric\": \"L2\", \"type\": \"flat\"},\n",
-    "        },\n",
-    "    ]\n",
-    "}"
+    "rag_eval_schema = [\n",
+    "    {\"name\": \"id\", \"type\": \"str\"},\n",
+    "    {\"name\": \"text\", \"type\": \"bytes\"},\n",
+    "    {\"name\": \"embeddings\", \"type\": \"float32\"}\n",
+    "]\n",
+    "indexes = [{\"name\": \"flat_index\", \"column\": \"embeddings\", \"params\": {\"dims\": 1536, \"metric\": \"L2\"}}]"
    ]
   },
   {
@@ -394,10 +389,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "database = session.database(\"default\")\n",
     "# First ensure the table does not already exist\n",
     "try:\n",
     "    session.table(\"rag_eval\").drop()\n",
-    "    time.sleep(5)\n",
     "except kdbai.KDBAIException:\n",
     "    pass"
    ]
@@ -409,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = session.create_table(\"rag_eval\", rag_eval_schema)"
+    "table = database.create_table(\"rag_eval\", schema=rag_eval_schema, indexes=indexes)"
    ]
   },
   {
