--- a/unstructured_io_RAG/Table_RAG_Unstructured_KDBAI_LangChain_RAG.ipynb
+++ b/unstructured_io_RAG/Table_RAG_Unstructured_KDBAI_LangChain_RAG.ipynb
@@ -1738,17 +1738,7 @@
         "    # Prompt the user to enter the API key\n",
         "    KDBAI_ENDPOINT = input(\"KDB.AI ENDPOINT: \")\n",
         "    # Save the API key as an environment variable for the current session\n",
-        "    os.environ[\"KDBAI_ENDPOINT\"] = KDBAI_ENDPOINT\n",
-        "\n",
-        "\n",
-        "# Check if KDBAI_API_KEY is in the environment variables\n",
-        "if \"KDBAI_API_KEY\" in os.environ:\n",
-        "    KDBAI_API_KEY = os.environ[\"KDBAI_API_KEY\"]\n",
-        "else:\n",
-        "    # Prompt the user to enter the API key\n",
-        "    KDBAI_API_KEY = getpass(\"KDB.AI API key: \")\n",
-        "    # Save the API key as an environment variable for the current session\n",
-        "    os.environ[\"KDBAI_API_KEY\"] = KDBAI_API_KEY"
+        "    os.environ[\"KDBAI_ENDPOINT\"] = KDBAI_ENDPOINT"
       ]
     },
     {
@@ -1806,12 +1796,14 @@
       },
       "outputs": [],
       "source": [
-        "schema = {'columns': [\n",
-        "         {'name': 'id', 'pytype': 'str'},\n",
-        "         {'name': 'text', 'pytype': 'str'},\n",
-        "         {'name': 'metadata', 'pytype': 'dict'},\n",
-        "         {'name': 'embedding',\n",
-        "             'vectorIndex': {'dims': 1536, 'type': 'flat', 'metric': 'L2'}}]}"
+        "schema = [\n",
+        "    {'name': 'id', 'type': 'str'},\n",
+        "    {'name': 'text', 'type': 'bytes'},\n",
+        "    {'name': 'metadata', 'type': 'general'},\n",
+        "    {'name': 'embedding', 'type': 'float32s'}\n",
+        "]\n",
+        "\n",
+        "indexes = [{'name': 'flat_index', 'column': 'embedding', 'type': 'flat', 'params': {'dims': 1536, 'metric': 'L2'}}]"
       ]
     },
     {
@@ -1833,17 +1825,16 @@
       "source": [
         "Contextualized_KDBAI_TABLE_NAME = \"Contextualized_Table\"\n",
         "non_Contextualized_KDBAI_TABLE_NAME = \"Non_Contextualized_Table\"\n",
+        "database = session.database('default')\n",
         "\n",
         "# First ensure the tables do not already exist\n",
-        "if Contextualized_KDBAI_TABLE_NAME in session.list():\n",
-        "    session.table(Contextualized_KDBAI_TABLE_NAME).drop()\n",
-        "\n",
-        "if non_Contextualized_KDBAI_TABLE_NAME in session.list():\n",
-        "    session.table(non_Contextualized_KDBAI_TABLE_NAME).drop()\n",
+        "for table in database.tables:\n",
+        "    if table.name in [Contextualized_KDBAI_TABLE_NAME, non_Contextualized_KDBAI_TABLE_NAME]:\n",
+        "        table.drop()\n",
         "\n",
         "#Create the tables\n",
-        "table_contextualized = session.create_table(Contextualized_KDBAI_TABLE_NAME, schema)\n",
-        "table_non_contextualized = session.create_table(non_Contextualized_KDBAI_TABLE_NAME, schema)"
+        "table_contextualized = database.create_table(Contextualized_KDBAI_TABLE_NAME, schema=schema, indexes=indexes)\n",
+        "table_non_contextualized = database.create_table(non_Contextualized_KDBAI_TABLE_NAME, schema=schema, indexes=indexes)"
       ]
     },
     {
