--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -378,17 +378,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rag_schema = {\n",
-    "    \"columns\": [\n",
-    "        {\"name\": \"id\", \"pytype\": \"str\"},\n",
-    "        {\"name\": \"text\", \"pytype\": \"bytes\"},\n",
-    "        {\n",
-    "            \"name\": \"embeddings\",\n",
-    "            \"pytype\": \"float32\",\n",
-    "            \"vectorIndex\": {\"dims\": 1536, \"metric\": \"L2\", \"type\": \"flat\"},\n",
-    "        },\n",
-    "    ]\n",
-    "}"
+    "rag_schema = [\n",
+    "    {\"name\": \"id\", \"type\": \"str\"},\n",
+    "    {\"name\": \"text\", \"type\": \"bytes\"},\n",
+    "    {\"name\": \"embeddings\", \"type\": \"float32s\"},\n",
+    "]\n",
+    "\n",
+    "indexes = [{'name': 'flat_index', 'column': 'embeddings', 'type': 'flat', 'params': {\"dims\": 1536, \"metric\": \"L2\"}}]"
    ]
   },
   {
@@ -408,10 +404,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "database = session.database(\"default\")\n",
+    "\n",
     "# First ensure the table does not already exist\n",
     "try:\n",
     "    session.table(\"rag_langchain\").drop()\n",
-    "    time.sleep(5)\n",
     "except kdbai.KDBAIException:\n",
     "    pass"
    ]
@@ -423,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = session.create_table(\"rag_langchain\", rag_schema)"
+    "table = database.create_table(\"rag_langchain\", schema=rag_schema, indexes=indexes)"
    ]
   },
   {
