updated samples for 1.4.0

--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -46,17 +46,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 26,
    "id": "b5ebbb78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Looking in indexes: https://pypi.org/simple, https://kx-user-read:****@ext-nexus.kxi-dev.kx.com/repository/kxi/simple\n",
+      "Requirement already satisfied: kdbai_client in /home/gflood/.local/lib/python3.10/site-packages (1.4.0.dev10)\n",
+      "Requirement already satisfied: packaging in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (23.2)\n",
+      "Requirement already satisfied: pandas>=1.5.0 in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (2.1.4)\n",
+      "Requirement already satisfied: pykx<3.0.0,>=2.1.1 in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (2.5.1)\n",
+      "Requirement already satisfied: requests in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (2.32.3)\n",
+      "Requirement already satisfied: numpy<2,>=1.22.4 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (2024.1)\n",
+      "Requirement already satisfied: toml~=0.10.2 in /home/gflood/.local/lib/python3.10/site-packages (from pykx<3.0.0,>=2.1.1->kdbai_client) (0.10.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (2024.7.4)\n",
+      "Requirement already satisfied: six>=1.5 in /home/gflood/.local/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas>=1.5.0->kdbai_client) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install kdbai_client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 27,
    "id": "eee37861",
    "metadata": {},
    "outputs": [
@@ -64,23 +88,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir: cannot create directory ‘./data’: File exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-24 23:02:03--  https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/TSS_non_transformed/data/marketTrades.parquet\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "mkdir: cannot create directory ‘./data’: File exists\n",
+      "--2024-09-25 14:54:53--  https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/TSS_non_transformed/data/marketTrades.parquet\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.109.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 1277201 (1.2M) [application/octet-stream]\n",
-      "Saving to: ‘./data/marketTrades.parquet.9’\n",
+      "Saving to: ‘./data/marketTrades.parquet.11’\n",
       "\n",
       "marketTrades.parque 100%[===================>]   1.22M  --.-KB/s    in 0.1s    \n",
       "\n",
-      "2024-09-24 23:02:03 (9.61 MB/s) - ‘./data/marketTrades.parquet.9’ saved [1277201/1277201]\n",
+      "2024-09-25 14:54:53 (10.1 MB/s) - ‘./data/marketTrades.parquet.11’ saved [1277201/1277201]\n",
       "\n"
      ]
     }
@@ -94,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 28,
    "id": "0bd8b5ce-096a-4de1-9f32-0eb3a513ca7a",
    "metadata": {},
    "outputs": [],
@@ -114,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 29,
    "id": "9da1ed6b-e589-49ba-a87a-25a9aeed9633",
    "metadata": {},
    "outputs": [],
@@ -126,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 30,
    "id": "dd295f42-7c47-42a1-80ee-fbadf0b0324c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 31,
    "id": "975421d7",
    "metadata": {},
    "outputs": [],
@@ -191,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 32,
    "id": "89c06e33",
    "metadata": {},
    "outputs": [
@@ -224,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 33,
    "id": "7c8a19a0",
    "metadata": {},
    "outputs": [],
@@ -248,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 34,
    "id": "af8e7d64-c1da-457f-b1d1-c1e1cd423948",
    "metadata": {},
    "outputs": [
@@ -391,7 +409,7 @@
        "[50000 rows x 5 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 35,
    "id": "fd028215-d0ce-467c-9be8-d37c0bcb3b3b",
    "metadata": {},
    "outputs": [],
@@ -429,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 36,
    "id": "447a9927-85bb-41b9-8a9c-6a2f60cc5b16",
    "metadata": {},
    "outputs": [],
@@ -448,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 37,
    "id": "4c06af9e-b371-4982-8e2f-56c8a67d8c4f",
    "metadata": {},
    "outputs": [],
@@ -468,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 38,
    "id": "712b0e0e",
    "metadata": {},
    "outputs": [
@@ -611,7 +629,7 @@
        "[50000 rows x 5 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 39,
    "id": "7591d64e-04e1-4d86-a526-ddc4bcb919ac",
    "metadata": {},
    "outputs": [
@@ -632,7 +650,7 @@
        "{'rowsInserted': 50000}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 40,
    "id": "47a9b401-f435-47d1-9401-5c2909145160",
    "metadata": {},
    "outputs": [],
@@ -680,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "id": "839acee3-0568-4ea9-8e13-8961c85a107a",
    "metadata": {},
    "outputs": [],
@@ -690,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 42,
    "id": "9506b2ec-b128-4088-96aa-cb3afacde94f",
    "metadata": {},
    "outputs": [
@@ -777,7 +795,7 @@
        "4  [25.830730823799968, 25.607446282170713, 26.07...  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 43,
    "id": "b15409e6-81bf-4d2d-ab3b-0355b242eb21",
    "metadata": {},
    "outputs": [
@@ -798,7 +816,7 @@
        "Text(0.5, 1.0, 'Query Vector')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 44,
    "id": "a183ca10-f801-4803-8245-5d45d5c420a9",
    "metadata": {},
    "outputs": [
@@ -973,7 +991,7 @@
        "9     95 2024-02-19 01:19:09.146237969  AAA  7000  29.201223     95  10.124061"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 45,
    "id": "fc97c827-5750-4ea6-b2f6-82f2539c5629",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1191,7 @@
        "9  59.056613  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 46,
    "id": "0a09b97f-ed65-4d12-94b4-49ecf158719b",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1381,7 @@
        "9  19547 2024-03-01 16:56:43.881322592  AAA  8000  77.814046  19547  2.459691"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 47,
    "id": "1566def3-2bd3-42f6-a541-5a63a8ae0c10",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1562,7 @@
        "9    105 2024-02-19 01:27:28.738277703  AAA  6000  29.004960    105  6.461498"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 48,
    "id": "f312b2eb-c17e-47de-bde9-5d393c96d684",
    "metadata": {},
    "outputs": [
@@ -1578,48 +1596,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   index                          time  sym   qty      price  __nn_distance\n",
-      "0    100 2024-02-19 01:22:33.092023730  AAA  8000  28.180955       0.000013\n",
-      "1     99 2024-02-19 01:20:12.802501022  AAA  2000  27.996566       4.527070\n",
-      "2    101 2024-02-19 01:22:40.782989859  AAA  2000  27.793489       4.532988\n",
-      "3     98 2024-02-19 01:19:35.593288242  AAA  9000  28.493217       6.594388\n",
-      "4    102 2024-02-19 01:24:08.510938882  AAA  7000  27.933083       6.612245\n",
-      "5     97 2024-02-19 01:19:32.584855556  AAA  6000  28.734376       7.984468\n",
-      "6    103 2024-02-19 01:24:39.233463853  AAA  9000  28.403252       8.011267\n",
-      "7     96 2024-02-19 01:19:27.989527434  AAA  1000  28.989396       9.142472\n",
-      "8    104 2024-02-19 01:26:20.481255054  AAA  9000  28.880188       9.172721\n",
-      "9     95 2024-02-19 01:19:09.146237969  AAA  7000  29.201223      10.124061\n",
+      "   index                          time  sym   qty      price  nnIdx     nnDist\n",
+      "0    100 2024-02-19 01:22:33.092023730  AAA  8000  28.180955    100   0.000000\n",
+      "1     99 2024-02-19 01:20:12.802501022  AAA  2000  27.996566     99   4.527070\n",
+      "2    101 2024-02-19 01:22:40.782989859  AAA  2000  27.793489    101   4.532988\n",
+      "3     98 2024-02-19 01:19:35.593288242  AAA  9000  28.493217     98   6.594388\n",
+      "4    102 2024-02-19 01:24:08.510938882  AAA  7000  27.933083    102   6.612245\n",
+      "5     97 2024-02-19 01:19:32.584855556  AAA  6000  28.734376     97   7.984468\n",
+      "6    103 2024-02-19 01:24:39.233463853  AAA  9000  28.403252    103   8.011267\n",
+      "7     96 2024-02-19 01:19:27.989527434  AAA  1000  28.989396     96   9.142472\n",
+      "8    104 2024-02-19 01:26:20.481255054  AAA  9000  28.880188    104   9.172721\n",
+      "9     95 2024-02-19 01:19:09.146237969  AAA  7000  29.201223     95  10.124061\n",
       "\n",
-      "   index                          time  sym   qty      price  __nn_distance\n",
-      "0    100 2024-02-19 01:22:33.092023730  AAA  8000  28.180955       0.000000\n",
-      "1     99 2024-02-19 01:20:12.802501022  AAA  2000  27.996566       2.060435\n",
-      "2    101 2024-02-19 01:22:40.782989859  AAA  2000  27.793489       2.140956\n",
-      "3  14907 2024-02-27 23:18:12.271115630  AAA  9000  58.904305       2.369705\n",
-      "4  27249 2024-02-20 07:46:35.792305469  BBB  6000  15.817259       2.375721\n",
-      "5  14906 2024-02-27 23:17:01.033421158  AAA  9000  59.331964       2.385418\n",
-      "6  42517 2024-02-29 10:50:59.415277093  BBB  6000  10.757307       2.388048\n",
-      "7  27250 2024-02-20 07:48:04.330449253  BBB  9000  15.494382       2.431020\n",
-      "8  14905 2024-02-27 23:14:51.579989343  AAA  4000  59.699730       2.434130\n",
-      "9  19547 2024-03-01 16:56:43.881322592  AAA  8000  77.814046       2.459691\n",
+      "   index                          time  sym   qty      price  nnIdx    nnDist\n",
+      "0    100 2024-02-19 01:22:33.092023730  AAA  8000  28.180955    100  0.000004\n",
+      "1     99 2024-02-19 01:20:12.802501022  AAA  2000  27.996566     99  2.060435\n",
+      "2    101 2024-02-19 01:22:40.782989859  AAA  2000  27.793489    101  2.140956\n",
+      "3  14907 2024-02-27 23:18:12.271115630  AAA  9000  58.904305  14907  2.369705\n",
+      "4  27249 2024-02-20 07:46:35.792305469  BBB  6000  15.817259  27249  2.375721\n",
+      "5  14906 2024-02-27 23:17:01.033421158  AAA  9000  59.331964  14906  2.385418\n",
+      "6  42517 2024-02-29 10:50:59.415277093  BBB  6000  10.757307  42517  2.388048\n",
+      "7  27250 2024-02-20 07:48:04.330449253  BBB  9000  15.494382  27250  2.431020\n",
+      "8  14905 2024-02-27 23:14:51.579989343  AAA  4000  59.699730  14905  2.434130\n",
+      "9  19547 2024-03-01 16:56:43.881322592  AAA  8000  77.814046  19547  2.459691\n",
       "\n",
-      "   index                          time  sym   qty      price  __nn_distance\n",
-      "0    100 2024-02-19 01:22:33.092023730  AAA  8000  28.180955       0.000000\n",
-      "1    101 2024-02-19 01:22:40.782989859  AAA  2000  27.793489       2.973744\n",
-      "2     99 2024-02-19 01:20:12.802501022  AAA  2000  27.996566       2.989074\n",
-      "3    102 2024-02-19 01:24:08.510938882  AAA  7000  27.933083       4.320273\n",
-      "4     98 2024-02-19 01:19:35.593288242  AAA  9000  28.493217       4.364905\n",
-      "5    103 2024-02-19 01:24:39.233463853  AAA  9000  28.403252       5.199802\n",
-      "6     97 2024-02-19 01:19:32.584855556  AAA  6000  28.734376       5.293356\n",
-      "7    104 2024-02-19 01:26:20.481255054  AAA  9000  28.880188       5.912937\n",
-      "8     96 2024-02-19 01:19:27.989527434  AAA  1000  28.989396       6.068448\n",
-      "9    105 2024-02-19 01:27:28.738277703  AAA  6000  29.004960       6.461498\n",
+      "   index                          time  sym   qty      price  nnIdx    nnDist\n",
+      "0    100 2024-02-19 01:22:33.092023730  AAA  8000  28.180955    100  0.000006\n",
+      "1    101 2024-02-19 01:22:40.782989859  AAA  2000  27.793489    101  2.973744\n",
+      "2     99 2024-02-19 01:20:12.802501022  AAA  2000  27.996566     99  2.989074\n",
+      "3    102 2024-02-19 01:24:08.510938882  AAA  7000  27.933083    102  4.320273\n",
+      "4     98 2024-02-19 01:19:35.593288242  AAA  9000  28.493217     98  4.364905\n",
+      "5    103 2024-02-19 01:24:39.233463853  AAA  9000  28.403252    103  5.199802\n",
+      "6     97 2024-02-19 01:19:32.584855556  AAA  6000  28.734376     97  5.293356\n",
+      "7    104 2024-02-19 01:26:20.481255054  AAA  9000  28.880188    104  5.912937\n",
+      "8     96 2024-02-19 01:19:27.989527434  AAA  1000  28.989396     96  6.068448\n",
+      "9    105 2024-02-19 01:27:28.738277703  AAA  6000  29.004960    105  6.461498\n",
       "\n"
      ]
     }
    ],
    "source": [
     "multi_start=datetime.datetime.now()\n",
-    "results = table.search(vectors={'flat_index': [q, smaller_query_50, smaller_query_500]}, n=10, type=\"tss\")\n",
+    "results = table.search(vectors={'price': [q, smaller_query_50, smaller_query_500]}, n=10, type=\"tss\")\n",
     "multi_stop=datetime.datetime.now()\n",
     "for result in results:\n",
     "    print(result)\n",
@@ -1644,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 49,
    "id": "b4a24f6b-16da-459d-897f-cdcab40f6370",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1670,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim  (MB): 8.75\n"
+      "Sim  (MB): -0.25\n"
      ]
     }
    ],
@@ -1671,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 50,
    "id": "85d2ead0",
    "metadata": {},
    "outputs": [],
@@ -1694,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 51,
    "id": "eede9dd9",
    "metadata": {},
    "outputs": [
@@ -1702,8 +1720,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim: Hours: 0, Minutes: 0, Seconds: 0, Milliseconds: 30\n",
-      "Multi: Hours: 0, Minutes: 0, Seconds: 0, Milliseconds: 26\n"
+      "Sim: Hours: 0, Minutes: 0, Seconds: 0, Milliseconds: 15\n",
+      "Multi: Hours: 0, Minutes: 0, Seconds: 0, Milliseconds: 36\n"
      ]
     }
    ],
@@ -1723,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "892a4e75-43f8-468a-8148-82b795f1e764",
    "metadata": {},
    "outputs": [],
