--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -57,20 +57,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c93b2276",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Looking in indexes: https://pypi.org/simple, https://kx-user-read:****@ext-nexus.kxi-dev.kx.com/repository/kxi/simple\n",
+      "Requirement already satisfied: kdbai_client in /home/gflood/.local/lib/python3.10/site-packages (1.4.0.dev10)\n",
+      "Requirement already satisfied: langchain in /home/gflood/.local/lib/python3.10/site-packages (0.1.15)\n",
+      "Requirement already satisfied: langchain_openai in /home/gflood/.local/lib/python3.10/site-packages (0.1.2)\n",
+      "Requirement already satisfied: langchain-community in /home/gflood/.local/lib/python3.10/site-packages (0.0.32)\n",
+      "Requirement already satisfied: packaging in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (23.2)\n",
+      "Requirement already satisfied: pandas>=1.5.0 in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (2.1.4)\n",
+      "Requirement already satisfied: pykx<3.0.0,>=2.1.1 in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (2.5.1)\n",
+      "Requirement already satisfied: requests in /home/gflood/.local/lib/python3.10/site-packages (from kdbai_client) (2.32.3)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (6.0.1)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (2.0.31)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (3.10.0)\n",
+      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (4.0.3)\n",
+      "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (0.6.7)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (1.33)\n",
+      "Requirement already satisfied: langchain-core<0.2.0,>=0.1.41 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (0.1.52)\n",
+      "Requirement already satisfied: langchain-text-splitters<0.1,>=0.0.1 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (0.0.1)\n",
+      "Requirement already satisfied: langsmith<0.2.0,>=0.1.17 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (0.1.82)\n",
+      "Requirement already satisfied: numpy<2,>=1 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (1.26.4)\n",
+      "Requirement already satisfied: pydantic<3,>=1 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (2.8.2)\n",
+      "Requirement already satisfied: tenacity<9.0.0,>=8.1.0 in /home/gflood/.local/lib/python3.10/site-packages (from langchain) (8.5.0)\n",
+      "Requirement already satisfied: openai<2.0.0,>=1.10.0 in /home/gflood/.local/lib/python3.10/site-packages (from langchain_openai) (1.37.1)\n",
+      "Requirement already satisfied: tiktoken<1,>=0.5.2 in /home/gflood/.local/lib/python3.10/site-packages (from langchain_openai) (0.7.0)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /home/gflood/.local/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (2.3.4)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /home/gflood/.local/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /home/gflood/.local/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (23.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /home/gflood/.local/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/gflood/.local/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/gflood/.local/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.9.4)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /home/gflood/.local/lib/python3.10/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain) (3.21.3)\n",
+      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /home/gflood/.local/lib/python3.10/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain) (0.9.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /home/gflood/.local/lib/python3.10/site-packages (from jsonpatch<2.0,>=1.33->langchain) (2.4)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in /home/gflood/.local/lib/python3.10/site-packages (from langsmith<0.2.0,>=0.1.17->langchain) (3.10.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /home/gflood/.local/lib/python3.10/site-packages (from openai<2.0.0,>=1.10.0->langchain_openai) (4.4.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /home/gflood/.local/lib/python3.10/site-packages (from openai<2.0.0,>=1.10.0->langchain_openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /home/gflood/.local/lib/python3.10/site-packages (from openai<2.0.0,>=1.10.0->langchain_openai) (0.27.0)\n",
+      "Requirement already satisfied: sniffio in /home/gflood/.local/lib/python3.10/site-packages (from openai<2.0.0,>=1.10.0->langchain_openai) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in /home/gflood/.local/lib/python3.10/site-packages (from openai<2.0.0,>=1.10.0->langchain_openai) (4.66.4)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in /home/gflood/.local/lib/python3.10/site-packages (from openai<2.0.0,>=1.10.0->langchain_openai) (4.12.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /home/gflood/.local/lib/python3.10/site-packages (from pandas>=1.5.0->kdbai_client) (2024.1)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in /home/gflood/.local/lib/python3.10/site-packages (from pydantic<3,>=1->langchain) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in /home/gflood/.local/lib/python3.10/site-packages (from pydantic<3,>=1->langchain) (2.20.1)\n",
+      "Requirement already satisfied: toml~=0.10.2 in /home/gflood/.local/lib/python3.10/site-packages (from pykx<3.0.0,>=2.1.1->kdbai_client) (0.10.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/gflood/.local/lib/python3.10/site-packages (from requests->kdbai_client) (2024.7.4)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /home/gflood/.local/lib/python3.10/site-packages (from SQLAlchemy<3,>=1.4->langchain) (3.0.3)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in /home/gflood/.local/lib/python3.10/site-packages (from tiktoken<1,>=0.5.2->langchain_openai) (2024.7.24)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in /home/gflood/.local/lib/python3.10/site-packages (from anyio<5,>=3.5.0->openai<2.0.0,>=1.10.0->langchain_openai) (1.2.2)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/gflood/.local/lib/python3.10/site-packages (from httpx<1,>=0.23.0->openai<2.0.0,>=1.10.0->langchain_openai) (1.0.5)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /home/gflood/.local/lib/python3.10/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai<2.0.0,>=1.10.0->langchain_openai) (0.14.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/gflood/.local/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas>=1.5.0->kdbai_client) (1.16.0)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /home/gflood/.local/lib/python3.10/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain) (1.0.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install kdbai_client langchain langchain_openai langchain-community"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "c95778f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘./data’: File exists\n",
+      "--2024-09-25 14:27:09--  https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/retrieval_augmented_generation/data/state_of_the_union.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.109.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 39027 (38K) [text/plain]\n",
+      "Saving to: ‘./data/state_of_the_union.txt.3’\n",
+      "\n",
+      "state_of_the_union. 100%[===================>]  38.11K  --.-KB/s    in 0.008s  \n",
+      "\n",
+      "2024-09-25 14:27:09 (4.56 MB/s) - ‘./data/state_of_the_union.txt.3’ saved [39027/39027]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
     "### This downloads State of the Union Speech data\n",
@@ -90,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "894980f2",
    "metadata": {},
    "outputs": [],
@@ -104,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "b9549fe3",
    "metadata": {},
    "outputs": [],
@@ -120,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "5ab423cd",
    "metadata": {},
    "outputs": [],
@@ -144,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "ed70fbe3",
    "metadata": {},
    "outputs": [],
@@ -166,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "b03039cb",
    "metadata": {},
    "outputs": [],
@@ -198,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "69dfbffd",
    "metadata": {},
    "outputs": [],
@@ -219,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "84bfd8a4",
    "metadata": {},
    "outputs": [],
@@ -230,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "e9c70879",
    "metadata": {},
    "outputs": [],
@@ -251,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "ffa379e4",
    "metadata": {},
    "outputs": [],
@@ -296,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "e62f00a8",
    "metadata": {},
    "outputs": [],
@@ -315,10 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "ecf10fd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:You are running a development version of `kdbai_client`.\n",
+      "Compatibility with the KDB.AI server is not guaranteed.\n"
+     ]
+    }
+   ],
    "source": [
     "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
    ]
@@ -341,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "a62fd9f3",
    "metadata": {},
    "outputs": [],
@@ -359,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "299902d3",
    "metadata": {},
    "outputs": [],
@@ -369,7 +461,7 @@
     "    {\"name\": \"text\", \"type\": \"bytes\"},\n",
     "    {\"name\": \"embeddings\", \"type\": \"float32\"}\n",
     "]\n",
-    "indexes = [{\"name\": \"flat_index\", \"column\": \"embeddings\", \"params\": {\"dims\": 1536, \"metric\": \"L2\"}}]"
+    "indexes = [{\"name\": \"flat_index\", \"type\": \"flat\", \"column\": \"embeddings\", \"params\": {\"dims\": 1536, \"metric\": \"L2\"}}]"
    ]
   },
   {
@@ -384,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "0bbc9942",
    "metadata": {},
    "outputs": [],
@@ -392,14 +484,14 @@
     "database = session.database(\"default\")\n",
     "# First ensure the table does not already exist\n",
     "try:\n",
-    "    session.table(\"rag_eval\").drop()\n",
+    "    database.table(\"rag_eval\").drop()\n",
     "except kdbai.KDBAIException:\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "37840395",
    "metadata": {},
    "outputs": [],
@@ -424,10 +516,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "7680e758",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Table.insert() got an unexpected keyword argument 'warn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# use KDBAI as vector store\u001b[39;00m\n\u001b[1;32m      2\u001b[0m vecdb_kdbai \u001b[38;5;241m=\u001b[39m KDBAI(table, embeddings)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mvecdb_kdbai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_texts\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexts\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpages\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/langchain_community/vectorstores/kdbai.py:150\u001b[0m, in \u001b[0;36mKDBAI.add_texts\u001b[0;34m(self, texts, metadatas, ids, batch_size, **kwargs)\u001b[0m\n\u001b[1;32m    148\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    149\u001b[0m         batch_meta \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 150\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_insert\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_meta\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    151\u001b[0m     out_ids \u001b[38;5;241m=\u001b[39m out_ids \u001b[38;5;241m+\u001b[39m batch_ids\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out_ids\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/langchain_community/vectorstores/kdbai.py:97\u001b[0m, in \u001b[0;36mKDBAI._insert\u001b[0;34m(self, texts, ids, metadata)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     96\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([df, metadata], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m---> 97\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_table\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minsert\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwarn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Table.insert() got an unexpected keyword argument 'warn'"
+     ]
+    }
+   ],
    "source": [
     "# use KDBAI as vector store\n",
     "vecdb_kdbai = KDBAI(table, embeddings)\n",
