--- a/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
+++ b/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "I5D6E_dxfzgp"
       },
@@ -209,8 +209,7 @@
       },
       "outputs": [],
       "source": [
-        "### start session with KDB.AI Server\n",
-        "#session = kdbai.Session()"
+        "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
       ]
     },
     {
@@ -224,28 +223,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "lUpAh6CdyWow"
       },
       "outputs": [],
       "source": [
-        "schema = dict(\n",
-        "    columns=[\n",
-        "        dict(name=\"document_id\", pytype=\"bytes\"),\n",
-        "        dict(name=\"text\", pytype=\"bytes\"),\n",
-        "        dict(\n",
-        "            name=\"embedding\",\n",
-        "            pytype=\"float64\",\n",
-        "            vectorIndex=dict(type=\"flat\", metric=\"L2\", dims=1536),\n",
-        "        ),\n",
+        "schema = [\n",
+        "        dict(name=\"document_id\", type=\"bytes\"),\n",
+        "        dict(name=\"text\", type=\"bytes\"),\n",
+        "        dict(name=\"embeddings\", type=\"float32s\"),\n",
         "    ]\n",
-        ")"
+        "\n",
+        "indexFlat = {\n",
+        "        \"name\": \"flat\",\n",
+        "        \"type\": \"flat\",\n",
+        "        \"column\": \"embeddings\",\n",
+        "        \"params\": {'dims': 1536, 'metric': 'L2'},\n",
+        "    }"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Connect with kdbai database\n",
+        "db = session.database(\"default\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "RiYRfJbxyZe8"
       },
@@ -254,11 +264,13 @@
         "KDBAI_TABLE_NAME = \"LlamaParse_Table\"\n",
         "\n",
         "# First ensure the table does not already exist\n",
-        "if KDBAI_TABLE_NAME in session.list():\n",
-        "    session.table(KDBAI_TABLE_NAME).drop()\n",
+        "try:\n",
+        "    db.table(KDBAI_TABLE_NAME).drop()\n",
+        "except kdbai.KDBAIException:\n",
+        "    pass\n",
         "\n",
         "#Create the table\n",
-        "table = session.create_table(KDBAI_TABLE_NAME, schema)"
+        "table = db.create_table(KDBAI_TABLE_NAME, schema, indexes=[indexFlat])"
       ]
     },
     {
@@ -273,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "-DPfDHeOnyxp"
       },
@@ -294,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "CJWBLC_dhiww"
       },
@@ -312,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "bk40jlZMhKKT"
       },
@@ -323,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "as8sskUxnQfM"
       },
@@ -343,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -356,12 +368,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Started parsing the file under job_id df0a21ea-1ab6-4a59-aafa-385bc0cc45bc\n"
+            "Started parsing the file under job_id 53446c8f-83b2-4968-b3e6-f36ed88d432d\n"
           ]
         }
       ],
       "source": [
-        "documents = LlamaParse(result_type=\"markdown\", parsing_instructions=parsing_instructions).load_data(pdf_file_name)\n"
+        "documents = LlamaParse(result_type=\"markdown\", parsing_instructions=parsing_instructions).load_data(pdf_file_name)"
       ]
     },
     {
@@ -412,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "8PKK7IC1jdX7"
       },
@@ -424,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1094,7 +1106,12 @@
         "cohere_rerank = CohereRerank(top_n=10)\n",
         "\n",
         "### Create the query_engine to execute RAG pipeline using LlamaIndex, KDB.AI, and Cohere reranker\n",
-        "query_engine = recursive_index.as_query_engine(similarity_top_k=20, node_postprocessors=[cohere_rerank],)"
+        "query_engine = recursive_index.as_query_engine(similarity_top_k=20,\n",
+        "                                               node_postprocessors=[cohere_rerank],\n",
+        "                                               vector_store_kwargs={\n",
+        "                                                    \"index\" : \"flat\",\n",
+        "                                                },\n",
+        "                                            )"
       ]
     },
     {
@@ -1305,7 +1322,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.15"
     }
   },
   "nbformat": 4,
