Update metadata types

--- a/LlamaIndex_samples/Sub_Question_Query_Engine_LlamaIndex_KDBAI.ipynb
+++ b/LlamaIndex_samples/Sub_Question_Query_Engine_LlamaIndex_KDBAI.ipynb
@@ -387,8 +387,8 @@
         "        dict(name=\"document_id\", type=\"bytes\"),\n",
         "        dict(name=\"text\", type=\"bytes\"),\n",
         "        dict(name=\"embeddings\", type=\"float32s\"),\n",
-        "        dict(name=\"title\", type=\"bytes\"),\n",
-        "        dict(name=\"file_path\", type=\"bytes\")\n",
+        "        dict(name=\"title\", type=\"str\"),\n",
+        "        dict(name=\"file_path\", type=\"str\")\n",
         "    ]\n",
         "\n",
         "indexFlat = {\n",
