--- a/LlamaIndex_samples/Multimodal_RAG_LLamaIndex_CLIP_KDBAI.ipynb
+++ b/LlamaIndex_samples/Multimodal_RAG_LLamaIndex_CLIP_KDBAI.ipynb
@@ -864,8 +864,8 @@
         "    ondisk_file_name = v[\"file_path\"].split('/')[-1]\n",
         "    metadata_key = f\"{data_dir}/{ondisk_file_name}\"\n",
         "    metadata_value = {\n",
-        "        \"filename\": v[\"filename\"],\n",
-        "        \"file_path\": f\"{data_dir}/{ondisk_file_name}\"\n",
+        "        \"filename\": v[\"filename\"].encode(\"utf-8\"),\n",
+        "        \"file_path\": f\"{data_dir}/{ondisk_file_name}\".encode(\"utf-8\")\n",
         "    }\n",
         "    metadata_dict[metadata_key] = metadata_value\n",
         "\n",
@@ -874,8 +874,8 @@
         "    ondisk_file_name = v[\"file_path\"].split('/')[-1]\n",
         "    metadata_key = f\"{data_dir}/{ondisk_file_name}\"\n",
         "    metadata_value = {\n",
-        "        \"filename\": v[\"filename\"],\n",
-        "        \"file_path\": f\"{data_dir}/{ondisk_file_name}\"\n",
+        "        \"filename\": v[\"filename\"].encode(\"utf-8\"),\n",
+        "        \"file_path\": f\"{data_dir}/{ondisk_file_name}\".encode(\"utf-8\")\n",
         "    }\n",
         "    metadata_dict[metadata_key] = metadata_value"
       ]
